# TGFtools

./: Makefile.am  Makefile.in  README  configure  configure.ac  tgftools_init.csh  tgftools_init.sh
data/: gbmtrig_tgfs1.txt  lat_tgfs.txt  other_tgfs.txt  wwlln_pos_trig_for_msb.txt  wwlln_pos_untrig_for_msb.txt  wwlln_strikes1.txt
data/fits_templates/: pha1template.pha  pha2template.pha  tte.fit
src/: DBStringUtilities.cpp  DBStringUtilities.hh  DataRecorder.hh  DynMatrix.h  EdgeSet.hh  Gbm_PositionIO.cpp  Gbm_PositionIO.h  GenericSQL.cpp  GenericSQL.h  GeoTransform.cpp  GeoTransform.h  PHA2_IO.cpp  PHA2_IO.hh  PHAElements.hh  PHAStructures.cpp  PHAStructures.hh  PHA_IO.cpp  PHA_IO.hh  TTE_IO.cpp  TTE_IO.hh  TTEventTable.hh  VectorSpan.h  algorithms_t.cpp  algorithms_t.h  disApp.cpp  gbm_geometry.cpp  gbm_geometry.hh  gbmrsp_interface.hh  get_fermi_nadir.cpp  get_match_coords.cpp  get_tgf_direction.cpp  integrate_tgf_times.cpp  make_data_plot.cpp  make_geocenter_drms.cpp  make_match_data.cpp  my_sqlite_func.c  my_sqlite_func.h  set_tgf_bounds.cpp  spoccExeUtilities.cpp  spoccExeUtilities.h  (+5 more)
src/scripts/: FITSUtils.pm  GbmTime.pm  add_strokes.pl  add_tgfs.pl  posharchive.pl  remove_matches.pl  remove_strokes.pl  remove_tgfs.pl  show_matches.pl  show_posdata.sh  show_strokes.sh  show_tgfs.pl  show_ttedata.sh  tgf_data_report.pl  ttearchive.pl
